[project]
name = "rag-competition"
version = "0.1.0"
description = "RAG Competition - FastAPI with Vietnamese Embeddings"
requires-python = ">=3.10"

dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "pydantic==2.5.0",
    "sentence-transformers==2.2.2",
    "langchain-text-splitters==0.0.1",
    "openai==1.3.0",
    "scikit-learn==1.3.2",
    "numpy==1.24.3",
    "requests==2.31.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"