[project]
name = "rag-competition"
version = "0.1.0"
description = "RAG Competition - FastAPI with Vietnamese Embeddings"
requires-python = ">=3.10"

dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "pydantic==2.5.0",
    "sentence-transformers>=3.0.0",
    "langchain-text-splitters>=0.1.0",
    "openai>=1.14.0",
    "scikit-learn==1.3.2",
    "numpy==1.24.3",
    "requests==2.31.0",
    "huggingface-hub>=0.16.0",
]